--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/themes": "^2.0.3",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
